--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,76 @@
 html {
   font-size: 62.5%;
+  margin: 0;
 }
 
 body {
+  font-family: "Outfit", serif;
+  font-size: 1.6rem;
+  margin: 3rem;
+}
+
+/* Colors */
+:root {
+  --white: hsl(0, 0%, 100%);
+
+  --stone100: hsl(30, 54%, 90%);
+  --stone150: hsl(30, 18%, 87%);
+  --stone600: hsl(30, 10%, 34%);
+  --stone900: hsl(24, 5%, 18%);
+
+  --brown: hsl(14, 45%, 36%);
+
+  --rose800: hsl(332, 51%, 32%);
+  --rose50: hsl(330, 100%, 98%);
+}
+
+/* Typography */
+h1 {
+  color: var(--stone900);
+  font-family: "Young Serif", serif;
+  font-size: 3.2rem;
+}
+
+h2 {
+  color: var(--rose800);
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+h3 {
+  color: var(--brown);
+  font-family: "Young Serif", serif;
+  font-size: 2.4rem;
+}
+
+p {
+  color: var(--stone600);
+  font-weight: 400;
+}
+
+/* Layout */
+.picture {
+  width: 100%;
+}
+
+.preparation {
+  background-color: var(--rose50);
+  padding: 1.6rem;
+}
+
+.preparation ul {
+  color: var(--rose800);
+}
+
+.instructions ol {
+  color: var(--brown);
+}
+
+.nutrition th {
+  color: var(--stone600);
+}
+
+.nutrition td {
+  color: var(--brown);
+  font-weight: 700;
 }
