--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ h1 {
   color: var(--stone900);
   font-family: "Young Serif", serif;
   font-size: 3.2rem;
+  font-weight: 400;
 }
 
 h2 {
@@ -47,6 +48,7 @@ h3 {
   color: var(--brown);
   font-family: "Young Serif", serif;
   font-size: 2.4rem;
+  font-weight: 400;
 }
 
 p,
@@ -62,20 +64,15 @@ strong {
 
 /* Layout */
 .card {
-  width: 100vw;
+  max-width: 50rem;
   overflow: hidden;
+  margin: 0 auto;
 }
 
 .picture {
   max-width: 100%;
   display: block;
   object-fit: cover;
-}
-
-.container {
-  max-width: 50rem;
-  margin: 0 auto;
-  padding: 2rem;
 }
 
 section {
@@ -145,7 +142,6 @@ ol li {
 
 @media (min-width: 768px) {
   .picture {
-    max-width: 50rem;
     max-height: 40rem;
     margin: 0 auto;
     border-radius: 1rem;
